--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     build: .
     ports:
       - "5000:5000"
+    env_file:
+      - ./.env
     volumes:
       - ./app:/app/app
       # JSONS de la persistencia de datos
