--- a/app/config/logging.conf
+++ b/app/config/logging.conf
@@ -16,19 +16,19 @@ format=%(levelname)s: %(message)s
 
 [handler_consoleHandler]
 class=StreamHandler
-level=INFO
+level=DEBUG
 formatter=simpleFormatter
 args=(sys.stdout,)
 
 [handler_fileHandler]
 class=logging.handlers.TimedRotatingFileHandler
-level=INFO
+level=DEBUG
 formatter=detailFormatter
 args=('logs/app.log', 'midnight', 1, 10, 'utf-8')
 
 [handler_tasksHandler]
 class=logging.handlers.TimedRotatingFileHandler
-level=INFO
+level=DEBUG
 formatter=detailFormatter
 args=('logs/tasks.log', 'midnight', 1, 10, 'utf-8')
 
@@ -39,15 +39,15 @@ formatter=detailFormatter
 args=('logs/errors.log', 'midnight', 1, 10, 'utf-8')
 
 [logger_root]
-level=INFO
+level=DEBUG
 handlers=consoleHandler
 
 [logger_app]
-level=INFO
+level=DEBUG
 handlers=consoleHandler,fileHandler
 qualname=app
 
 [logger_tasks]
-level=INFO
+level=DEBUG
 handlers=consoleHandler,tasksHandler,errorHandler
 qualname=tasks
